tests/snapshots/cli__config_local_creates_file.snap
---
source: tests/cli.rs
expression: "sandbox.taco_with_editor(&noop, &[\"config\", \"--local\"], \"\")"
snapshot_kind: text
---
exit code: 0
