tests/snapshots/cli__config_local_default_file.snap
---
source: tests/cli.rs
expression: sandbox.local_config_contents()
snapshot_kind: text
---
{
  "commands": {}
}
