tests/snapshots/cli__config_no_restore_option.snap
---
source: tests/cli.rs
expression: "sandbox.taco_config(&breaker, \"r\\n\")"
snapshot_kind: text
---
exit code: 1
----- stdout -----
Invalid config file: <root>/taco.json: key must be a string at line 1 column 2

What now? (e)dit again / (k)eep it broken 
What now? (e)dit again / (k)eep it broken
