tests/snapshots/cli__config_restore.snap
---
source: tests/cli.rs
expression: "sandbox.taco_config(&breaker, \"r\\n\")"
snapshot_kind: text
---
exit code: 0
----- stdout -----
Invalid config file: <root>/taco.json: key must be a string at line 1 column 2

What now? (e)dit again / (r)estore previous config / (k)eep it broken Restored the previous config
