tests/snapshots/cli__deeper_project_wins.snap
---
source: tests/cli.rs
expression: "sandbox.taco_in(&sandbox.nested(), &[\"greet\"])"
---
exit code: 0
----- stdout -----
from-nested
