tests/snapshots/cli__doctor_config_after_decline.snap
---
source: tests/cli.rs
expression: sandbox.config_contents()
---
{"projects": {"/taco-test-does-not-exist": {"build": "make"}}}
