tests/snapshots/cli__doctor_config_after_fix.snap
---
source: tests/cli.rs
expression: sandbox.config_contents()
---
{
  "aliases": {},
  "projects": {}
}
