tests/snapshots/cli__doctor_fix_declined.snap
---
source: tests/cli.rs
expression: "sandbox.taco_stdin(&sandbox.project, &[\"doctor\", \"--fix\"], \"n\\n\")"
---
exit code: 1
----- stdout -----
Checking <root>/taco.json

Project directories that no longer exist:
  ∙ /taco-test-does-not-exist (1 command)
Remove these projects from the config? (y/N) 

1 issue left.
