tests/snapshots/cli__doctor_guarding_alias_kept.snap
---
source: tests/cli.rs
expression: "sandbox.taco(&[\"doctor\"])"
snapshot_kind: text
---
exit code: 0
----- stdout -----
Checking <root>/taco.json

No issues found, your taco is fresh!
